the reports receipts,payments,holdings